--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -25,55 +25,103 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/Drate"
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/dname"
+            android:layout_marginLeft="10dp"
+            android:text="Interest"
+            android:textColor="@color/cardview_light_background"
+            android:textSize="15sp" />
+        <TextView
             android:id="@+id/drate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/dname"
+            android:layout_toRightOf="@id/Drate"
             android:layout_marginLeft="10dp"
-            android:text="Interest Rate %"
+            android:text="Interest"
             android:textColor="@color/cardview_light_background"
-            android:textSize="18sp" />
+            android:textSize="15sp" />
 
-
+        <TextView
+            android:id="@+id/Dcalculate"
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/Drate"
+            android:layout_marginLeft="10dp"
+            android:text="Calculate Rs"
+            android:textColor="@color/cardview_light_background"
+            android:textSize="15sp" />
         <TextView
             android:id="@+id/dcalculate"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/drate"
+            android:layout_toRightOf="@id/Dcalculate"
             android:layout_marginLeft="10dp"
-            android:text="rate*amount"
+            android:text="Calculate"
             android:textColor="@color/cardview_light_background"
-            android:textSize="18sp" />
+            android:textSize="15sp" />
 
         <TextView
-            android:id="@+id/dmail"
-            android:layout_width="match_parent"
+            android:id="@+id/Daddress"
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:layout_below="@id/dcalculate"
+            android:layout_below="@id/Dcalculate"
             android:layout_marginLeft="10dp"
-            android:text="E-mail"
+            android:text="Head Office"
             android:textColor="@color/cardview_light_background"
-            android:textSize="18sp" />
-
+            android:textSize="15sp" />
         <TextView
             android:id="@+id/daddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/dmail"
+            android:layout_below="@id/dcalculate"
+            android:layout_toRightOf="@id/Daddress"
             android:layout_marginLeft="10dp"
             android:text="Address"
             android:textColor="@color/cardview_light_background"
-            android:textSize="18sp" />
+            android:textSize="15sp" />
 
+        <TextView
+            android:id="@+id/Dtp"
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/Daddress"
+            android:layout_marginLeft="10dp"
+            android:text="Contact"
+            android:textColor="@color/cardview_light_background"
+            android:textSize="15sp" />
         <TextView
             android:id="@+id/dtp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/daddress"
+            android:layout_toRightOf="@id/Dcalculate"
             android:layout_marginLeft="10dp"
-            android:text="TP"
+            android:text="Contact"
             android:textColor="@color/cardview_light_background"
-            android:textSize="18sp" />
+            android:textSize="15sp" />
+        <TextView
+            android:id="@+id/Dmail"
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/Dtp"
+            android:layout_marginLeft="10dp"
+            android:text="E-mail"
+            android:textColor="@color/cardview_light_background"
+            android:textSize="15sp" />
+        <TextView
+            android:id="@+id/dmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/dtp"
+            android:layout_toRightOf="@id/Dmail"
+            android:layout_marginLeft="10dp"
+            android:text="mail"
+            android:textColor="@color/cardview_light_background"
+            android:textSize="15sp" />
 
     </RelativeLayout>
 
@@ -97,6 +145,7 @@
             android:id="@+id/cname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="Enter your Full name"
             android:layout_below="@+id/Cname"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
@@ -123,6 +172,7 @@
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
             android:drawablePadding="30dp"
+            android:hint="Enter your NIC number"
             android:inputType="text"
             android:padding="10dp" />
 
@@ -142,6 +192,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/Caddress"
             android:layout_marginLeft="15dp"
+            android:hint="Enter your Address"
             android:layout_marginRight="15dp"
             android:drawablePadding="30dp"
             android:inputType="text"
@@ -164,6 +215,7 @@
             android:layout_below="@+id/Ccontact"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"
+            android:hint="Enter your contact number"
             android:drawablePadding="30dp"
             android:inputType="text"
             android:padding="10dp" />
