--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -4,14 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetailsActivity">
+    tools:context=".DetailsActivity"
+    android:layout_margin="5dp"
+>
 
     <RelativeLayout
         android:id="@+id/bank"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:background="@color/cardview_dark_background">
+        android:background="@color/blue"
+        >
 
         <TextView
             android:id="@+id/dname"
@@ -123,10 +126,31 @@
             android:textColor="@color/cardview_light_background"
             android:textSize="15sp" />
 
+        <TextView
+            android:id="@+id/Dtype"
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/Dmail"
+            android:layout_marginLeft="10dp"
+            android:text="Account"
+            android:textColor="@color/cardview_light_background"
+            android:textSize="15sp" />
+        <TextView
+            android:id="@+id/dtype"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/dmail"
+            android:layout_toRightOf="@id/Dtype"
+            android:layout_marginLeft="10dp"
+            android:text="Normal Saving"
+            android:textColor="@color/cardview_light_background"
+            android:textSize="15sp" />
+
     </RelativeLayout>
 
 
     <RelativeLayout
+        android:id="@+id/form"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_below="@+id/bank">
@@ -222,12 +246,16 @@
 
 
         <Button
-            android:id="@+id/btLogin"
+            android:id="@+id/btnapply"
             android:layout_width="match_parent"
+            android:textSize="20sp"
+            android:textColor="@color/cardview_light_background"
             android:layout_height="wrap_content"
             android:layout_below="@+id/ccontact"
             android:layout_centerVertical="true"
             android:text="Apply"
+            android:background="@color/blue"
+            android:layout_centerHorizontal="true"
             android:textAllCaps="false" />
     </RelativeLayout>
 
